# Deepguard-Enterprise-AI

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.streamlit  LICENSE  Makefile  PROJECT_PROGRESS.md  README.md  docker-compose.yml  packages.txt  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: secrets.toml
api/: __init__.py  exception_handlers.py
api/auth/: __init__.py  security.py
api/dependencies/: __init__.py
api/middleware/: __init__.py  logging.py  metrics.py  rate_limit.py
api/v1/: __init__.py
api/v1/endpoints/: __init__.py  auth.py  batch_detect.py  detect.py  health.py  history.py  image_detect.py  model_info.py  models.py  upload.py  video_detect.py
backend/: __init__.py  main.py  requirements.txt
backend/app/: __init__.py
configs/: api_config.yaml  database_config.yaml  dataset_config.yaml  logging_config.yaml  model_config.yaml  training_config.yaml
core/: __init__.py
core/domain/: __init__.py
core/domain/entities/: __init__.py  dataset_entity.py
core/domain/value_objects/: __init__.py  dataset_split.py
core/exceptions/: __init__.py  api_exceptions.py  dataset_exceptions.py
core/interfaces/: __init__.py  dataset_interface.py
core/use_cases/: __init__.py
database/: __init__.py  models.py  session.py
datasets/: __init__.py  downloader.py  factory.py  splitter.py  statistics.py  validator.py  versioning.py  visualization.py
datasets/augmentations/: __init__.py  train_transforms.py  val_transforms.py
datasets/loaders/: __init__.py  base_loader.py  celeb_df_loader.py  custom_loader.py  dfdc_loader.py  ff_plus_plus_loader.py
datasets/preprocessors/: __init__.py  face_extractor.py  image_preprocessor.py  video_preprocessor.py
deployment/grafana/dashboards/: deepguard_dashboard.json
deployment/grafana/provisioning/: dashboards.yml
deployment/nginx/: nginx.conf
deployment/prometheus/: prometheus.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPER_MANUAL.md  FUTURE_IMPROVEMENTS.md  INSTALLATION.md  PROJECT_REPORT.md  USER_MANUAL.md
docs/slides/: presentation.html
frontend/: app.py  client.py  index.html
frontend/src/: api.js  app.js
frontend/src/pages/: analytics.js  dashboard.js  detection.js  history.js  metrics.js  profile.js  settings.js  upload_media.js  webcam.js
frontend/styles/: design_system.py  main.css
frontend/theme/: __init__.py  animations.py  border_radius.py  colors.py  shadows.py  spacing.py  theme_manager.py  typography.py
frontend/utils/: __init__.py  notifications.py
logs/tensorboard/vit_base_patch16_224_ff++/: events.out.tfevents.1784476173.DESKTOP-TTF1EIR.8348.0  events.out.tfevents.1784476181.DESKTOP-TTF1EIR.13240.0  events.out.tfevents.1784476991.DESKTOP-TTF1EIR.10912.0  events.out.tfevents.1784480459.DESKTOP-TTF1EIR.15456.0
models/: __init__.py  config.py  factory.py
models/architectures/: __init__.py  vit.py
models/backbones/: __init__.py  lora.py
models/heads/: __init__.py  attention_pool.py  base.py  linear.py  mlp.py
repositories/: __init__.py
repositories/interfaces/: __init__.py  detection.py  model.py
repositories/sqlite/: __init__.py  detection.py  model.py
schemas/: __init__.py
schemas/requests/: __init__.py  detection.py
schemas/responses/: __init__.py  common.py  detection.py  health.py  models.py
scripts/: benchmark.py  export_onnx.py  prepare_dataset.py  train.py  verify_modules.py
services/: __init__.py
services/detection/: __init__.py  service.py
services/model_registry/: __init__.py
services/training/: __init__.py
tests/: __init__.py  conftest.py  test_frontend_client_config.py
tests/e2e/: __init__.py  test_api_e2e.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py
tests/integration/api/: __init__.py
tests/integration/database/: __init__.py
tests/load/: locustfile.py
tests/unit/: __init__.py  test_api.py  test_augmentations.py  test_database.py  test_explainability.py  test_face_extractor.py  test_loaders.py  test_model_pipeline.py  test_splitter.py  test_statistics.py  test_validator.py  test_visualization.py
tests/unit/models/: __init__.py  test_vit_lora.py
tests/unit/schemas/: __init__.py
tests/unit/services/: __init__.py  test_detection_service.py
tests/unit/utils/: __init__.py
training/: __init__.py  trainer.py
training/callbacks/: __init__.py  base.py  checkpointing.py  early_stopping.py  mlflow_logger.py  tensorboard_logger.py
training/evaluators/: __init__.py  metrics.py
training/losses/: __init__.py  focal.py
training/optimizers/: __init__.py
training/schedulers/: __init__.py  cosine_warmup.py
utils/: __init__.py  explainability.py
utils/image/: __init__.py
utils/io/: __init__.py
utils/logging/: __init__.py
utils/metrics/: __init__.py
utils/video/: __init__.py
utils/visualization/: __init__.py
vision/face_extraction/: alignment.py  base.py  batch_processor.py  benchmarker.py  cache.py  quality_filter.py  selector.py
vision/face_extraction/detectors/: __init__.py  mediapipe_detector.py  mtcnn_detector.py  retina_face.py
