# ============================================================
# DeepGuard — pyproject.toml
# Build System, Tool Configuration & Project Metadata
# ============================================================

[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

# ── Project Metadata ──────────────────────────────────────
[project]
name = "deepguard"
version = "1.0.0"
description = "Production-ready Deepfake Detection System using Vision Transformers"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "DeepGuard Team", email = "deepguard@example.com" }
]
keywords = [
    "deepfake",
    "detection",
    "vision-transformer",
    "computer-vision",
    "pytorch",
    "fastapi",
    "mlops",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

[project.urls]
Homepage = "https://github.com/your-org/deepguard"
Documentation = "https://deepguard.readthedocs.io"
Repository = "https://github.com/your-org/deepguard.git"
"Bug Tracker" = "https://github.com/your-org/deepguard/issues"
Changelog = "https://github.com/your-org/deepguard/blob/main/CHANGELOG.md"

[project.scripts]
deepguard = "backend.main:app"

# ── Setuptools ────────────────────────────────────────────
[tool.setuptools.packages.find]
where = ["."]
include = [
    "api*",
    "backend*",
    "core*",
    "database*",
    "datasets*",
    "models*",
    "repositories*",
    "schemas*",
    "services*",
    "training*",
    "utils*",
]

# ── Black ─────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | migrations
  | notebooks
)/
'''

# ── Ruff ──────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
src = [
    "api", "backend", "core", "database", "datasets",
    "models", "repositories", "schemas", "services",
    "training", "utils", "tests", "scripts"
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # bandit security
    "ANN", # flake8-annotations
    "PT",  # flake8-pytest-style
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # Ruff-specific rules
]
ignore = [
    "ANN101",  # Missing type annotation for `self`
    "ANN102",  # Missing type annotation for `cls`
    "S101",    # Allow assert in tests
    "B008",    # Do not perform function calls in default arguments (FastAPI Depends)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN", "S105", "S106"]
"scripts/*" = ["ANN", "S"]
"notebooks/*" = ["ANN", "E501"]
"**/migrations/*" = ["ANN", "E501"]

[tool.ruff.lint.isort]
known-first-party = [
    "api", "backend", "core", "database", "datasets",
    "models", "repositories", "schemas", "services",
    "training", "utils"
]
force-sort-within-sections = true

# ── MyPy ──────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
pretty = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "albumentations.*",
    "timm.*",
    "mlflow.*",
    "facenet_pytorch.*",
    "torchmetrics.*",
    "onnxruntime.*",
    "dlib.*",
    "matplotlib.*",
    "seaborn.*",
    "plotly.*",
    "diskcache.*",
    "sklearn.*",
]
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "-ra",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=55",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (fast, no I/O)",
    "integration: Integration tests (requires DB/filesystem)",
    "e2e: End-to-end tests (requires running server)",
    "slow: Tests that are slow (>5s)",
    "gpu: Tests that require a GPU",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]


# ── Coverage ──────────────────────────────────────────────
[tool.coverage.run]
source = [
    "api", "backend", "core", "database", "datasets",
    "models", "repositories", "schemas", "services",
    "training", "utils"
]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__init__.py",
    "*/notebooks/*",
    "*/scripts/*",
    "*/.venv/*",
    "*/conftest.py",
]
branch = true
parallel = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pass",
    "@(abc\\.)?abstractmethod",
]

# ── Bandit ────────────────────────────────────────────────
[tool.bandit]
exclude_dirs = ["tests", ".venv", "notebooks"]
skips = ["B101"]  # Allow assert in non-test code sparingly

# ── isort ─────────────────────────────────────────────────
[tool.isort]
profile = "black"
line_length = 100
known_first_party = [
    "api", "backend", "core", "database", "datasets",
    "models", "repositories", "schemas", "services",
    "training", "utils"
]
